--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ h1 {
   margin: 20px 0;
 }
 
+iframe {
+  overflow: hidden;
+  height: 56.25vw;
+  left: 50%;
+  min-height: 100vh;
+  min-width: 177.77vh;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+}
+
 /* ! NAVIGATION */
 .main-nav {
   z-index: 10;
@@ -51,29 +63,6 @@ h1 {
   transform: translate(0, -50%);
 }
 
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.original {
-  position: static;
-  transform: none;
-}
-
-n-nav .menu .icon {
-  background: none;
-  border: none;
-  /* bottom: 0; */
-  /* margin: auto 0; */
-  padding: 0;
-  /* width: 24px; */
-  height: 40px;
-  width: 40px;
-}
-
 .test {
   background: white;
   position: relative;
@@ -91,6 +80,7 @@ n-nav .menu .icon {
 }
 
 .video-wrapper {
+  background-color: gray;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -99,41 +89,43 @@ n-nav .menu .icon {
   top: 0;
   left: 56px;
   width: calc(100% - 112px);
-  /* transform: ; */
-  /* transition: all 1s ease; */
-  animation: hero-video-anim 7s ease-out forwards 1.8s;
+  /* transition: all 0.5s ease-in 1.5s; */
+  transition: top 1s cubic-bezier(0.165, 0.84, 0.44, 1) 1s,
+    opacity 1s ease 0.5s, width 1s ease;
 }
 
-.hero-anim-1 {
+/* !VIDEO WRAPPER ANIM */
+.hero-anim-1 .video-wrapper {
   opacity: 1;
   top: 200px;
-  left: 56px;
-  width: calc(100% - 112px);
 }
 
-/* .video-wrapper:before {
+.hero-anim-2 .video-wrapper {
+  top: 80px;
+}
+
+.hero-anim-3 .video-wrapper {
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.video-wrapper:before {
   height: 100%;
   left: 0;
   position: absolute;
   top: 0;
   width: 100%;
   content: "";
-  z-index: 10;
+  z-index: 1;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
     linear-gradient(0deg, rgba(148, 0, 37, 0.05), rgba(148, 0, 37, 0.05));
-  animation: hero-video-overlay-anim 0.1s forwards 8s;
-} */
+  /* animation: hero-video-overlay-anim 0.1s forwards 8s; */
+  /* transition: all 100s cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s; */
+}
 
-iframe {
-  overflow: hidden;
-  height: 56.25vw;
-  left: 50%;
-  min-height: 100vh;
-  min-width: 177.77vh;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 100vw;
+.hero-anim-3 .video-wrapper:before {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
 }
 
 .scrolldown-wrapper {
@@ -142,7 +134,7 @@ iframe {
   position: absolute;
   bottom: 0;
   transform: translateY(-100%);
-  animation: scroll-down-anim 1s forwards 0.1s;
+  transition: all 0.5s ease-in;
 }
 
 .scrolldown-img {
@@ -150,28 +142,62 @@ iframe {
   justify-content: center;
 }
 
+/*! SCROLLDOWN ANIM */
+.hero-anim-1 .scrolldown-wrapper {
+  transform: translateY(0);
+}
+
 .amp-wrapper {
   z-index: 2;
   width: 100%;
   position: absolute;
-  top: 100px;
+  top: 250px;
   opacity: 0;
   display: flex;
   justify-content: center;
-  animation: amp-anim 5.5s forwards 1s;
+  /* transition: all 0.5s ease-in 1s; */
+  /* transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) 1s; */
+  /* transition: transform 1s ease 0.5s, opacity 0.5s ease 1s ease, top 1s ease; */
+  transition: top 1.2s ease, opacity 3.9s ease;
+}
+
+/* ! AMP ANIMATION */
+.hero-anim-1 .amp-wrapper {
+  opacity: 1;
+  top: 100px;
+}
+
+.hero-anim-2 .amp-wrapper {
+  opacity: 0;
 }
 
 .title-wrapper {
   z-index: 2;
   width: 100%;
   position: absolute;
-  top: 280px;
+  top: 450px;
   opacity: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: title-anim 6.2s forwards 2.6s;
+  transition: top 2s cubic-bezier(0.165, 0.84, 0.44, 1) 1s,
+    opacity 1s ease 1.5s;
+}
+
+/* ! TITLE WRAPPER ANIMATION */
+
+.hero-anim-1 .title-wrapper {
+  opacity: 1;
+  top: 350px;
+}
+
+.hero-anim-2 .title-wrapper {
+  top: 100px;
+}
+
+.hero-anim-3 .title-wrapper {
+  opacity: 0;
 }
 
 .title-wrapper:after {
@@ -182,7 +208,13 @@ iframe {
   color: #ffffff;
   background: #ffffff;
   content: "";
-  animation: title-after-anim 2s forwards 6.2s;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1) 5.5s;
+}
+
+/* !TITLE WRAPPER AFTER ANIMATION */
+
+.hero-anim-1 .title-wrapper:after {
+  width: 80%;
 }
 
 .title-wrapper h1 {
