--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  /* background-color: rgb(182, 182, 249); */
+  background-color: rgb(182, 182, 249);
   margin: 0px;
   padding: 0px;
 }
@@ -71,7 +71,7 @@ iframe {
   width: 100%;
 }
 
-.wrapper {
+.js-wrapper {
   z-index: 1;
   position: relative;
   height: 100vh;
@@ -89,22 +89,20 @@ iframe {
   top: 0;
   left: 56px;
   width: calc(100% - 112px);
-  /* transition: all 0.5s ease-in 1.5s; */
-  transition: top 1s cubic-bezier(0.165, 0.84, 0.44, 1) 1s,
-    opacity 1s ease 0.5s, width 1s ease;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 /* !VIDEO WRAPPER ANIM */
-.hero-anim-1 .video-wrapper {
+.js-bg-anim-1 .video-wrapper {
   opacity: 1;
   top: 200px;
 }
 
-.hero-anim-2 .video-wrapper {
+.js-bg-anim-2 .video-wrapper {
   top: 80px;
 }
 
-.hero-anim-3 .video-wrapper {
+.js-bg-anim-3 .video-wrapper {
   top: 0;
   left: 0;
   width: 100%;
@@ -121,20 +119,21 @@ iframe {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
     linear-gradient(0deg, rgba(148, 0, 37, 0.05), rgba(148, 0, 37, 0.05));
   /* animation: hero-video-overlay-anim 0.1s forwards 8s; */
-  /* transition: all 100s cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s; */
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.hero-anim-3 .video-wrapper:before {
+.js-bg-anim-3 .video-wrapper:before {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
 }
 
 .scrolldown-wrapper {
+  opacity: 0;
   z-index: 2;
   width: 100%;
   position: absolute;
   bottom: 0;
   transform: translateY(-100%);
-  transition: all 0.5s ease-in;
+  transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .scrolldown-img {
@@ -143,8 +142,9 @@ iframe {
 }
 
 /*! SCROLLDOWN ANIM */
-.hero-anim-1 .scrolldown-wrapper {
+.js-sd-anim-1 .scrolldown-wrapper {
   transform: translateY(0);
+  opacity: 1;
 }
 
 .amp-wrapper {
@@ -155,19 +155,16 @@ iframe {
   opacity: 0;
   display: flex;
   justify-content: center;
-  /* transition: all 0.5s ease-in 1s; */
-  /* transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) 1s; */
-  /* transition: transform 1s ease 0.5s, opacity 0.5s ease 1s ease, top 1s ease; */
-  transition: top 1.2s ease, opacity 3.9s ease;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 /* ! AMP ANIMATION */
-.hero-anim-1 .amp-wrapper {
+.js-amp-anim-1 .amp-wrapper {
   opacity: 1;
   top: 100px;
 }
 
-.hero-anim-2 .amp-wrapper {
+.js-amp-anim-2 .amp-wrapper {
   opacity: 0;
 }
 
@@ -181,22 +178,21 @@ iframe {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: top 2s cubic-bezier(0.165, 0.84, 0.44, 1) 1s,
-    opacity 1s ease 1.5s;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 /* ! TITLE WRAPPER ANIMATION */
 
-.hero-anim-1 .title-wrapper {
+.js-title-anim-1 .title-wrapper {
   opacity: 1;
   top: 350px;
 }
 
-.hero-anim-2 .title-wrapper {
+.js-title-anim-2 .title-wrapper {
   top: 100px;
 }
 
-.hero-anim-3 .title-wrapper {
+.js-title-anim-3 .title-wrapper {
   opacity: 0;
 }
 
@@ -208,13 +204,13 @@ iframe {
   color: #ffffff;
   background: #ffffff;
   content: "";
-  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1) 5.5s;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 /* !TITLE WRAPPER AFTER ANIMATION */
 
-.hero-anim-1 .title-wrapper:after {
-  width: 80%;
+.js-title-anim-2 .title-wrapper:after {
+  width: 90%;
 }
 
 .title-wrapper h1 {
@@ -226,12 +222,12 @@ iframe {
 .content-wrapper {
   z-index: 2;
   position: absolute;
-  top: 300px;
+  top: 600px;
   opacity: 0;
   width: 100%;
   display: flex;
   justify-content: center;
-  animation: content-anim 2.5s forwards 6s;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .content-wrapper .contents {
@@ -240,6 +236,16 @@ iframe {
   width: 1250px;
 }
 
+/* ! CONTENT ANIMATION */
+
+.js-content-anim-1 .content-wrapper {
+  opacity: 1;
+  top: 300px;
+}
+
+.js-content-anim-3 .content-wrapper {
+  opacity: 0;
+}
 .content-left {
   width: 30%;
 }
@@ -263,122 +269,4 @@ iframe {
   letter-spacing: -0.02em;
   line-height: 26px;
   margin-bottom: 0;
-}
-
-@keyframes content-anim {
-  0% {
-    opacity: 0;
-    top: 400px;
-  }
-  33%,
-  56% {
-    opacity: 1;
-    top: 300px;
-  }
-  66%,
-  90% {
-    opacity: 1;
-    top: 300px;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes title-after-anim {
-  100% {
-    width: 80%;
-  }
-}
-
-@keyframes title-anim {
-  0% {
-    opacity: 0;
-    top: 400px;
-  }
-  6%,
-  23% {
-    opacity: 1;
-    top: 350px;
-  }
-  33%,
-  56% {
-    opacity: 1;
-    top: 350px;
-  }
-  66%,
-  90% {
-    opacity: 1;
-    top: 100px;
-  }
-  100% {
-    top: 100px;
-    opacity: 0;
-  }
-}
-
-@keyframes amp-anim {
-  0% {
-    top: 200px;
-  }
-  12% {
-    opacity: 1;
-    top: 100px;
-  }
-  33%,
-  56% {
-    opacity: 1;
-    top: 100px;
-  }
-  66%,
-  90% {
-    opacity: 1;
-    top: 100px;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes scroll-down-anim {
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes hero-video-anim {
-  0% {
-    top: 0;
-    opacity: 0;
-    left: 56px;
-    width: calc(100% - 112px);
-  }
-  5%,
-  56% {
-    opacity: 1;
-    top: 200px;
-    left: 56px;
-    width: calc(100% - 112px);
-  }
-
-  66%,
-  90% {
-    opacity: 1;
-    top: 80px;
-    left: 56px;
-    width: calc(100% - 112px);
-  }
-
-  100% {
-    opacity: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-}
-
-@keyframes hero-video-overlay-anim {
-  100% {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
-  }
 }
