--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ a {
 h1 {
   margin: 20px 0;
 }
+h2 {
+  margin-top: 0;
+}
 
 iframe {
   overflow: hidden;
@@ -488,10 +491,201 @@ iframe {
 
 .content-right p {
   color: #fff;
-  font-family: AktivGrotesk;
   font-size: 17px;
   font-weight: 300;
   letter-spacing: -0.02em;
   line-height: 26px;
   margin-bottom: 0;
+}
+
+/* ! CLIENT SPACE SECTION */
+
+.clients-space {
+  background-color: #940025;
+  width: 100%;
+  height: 100%;
+}
+
+.clients-space-wrapper {
+  padding: 0px 56px;
+}
+
+.clients-space-layout {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.clients-content {
+  width: 50%;
+  height: 100%;
+  padding-left: 70px;
+  padding-right: 50px;
+  padding-top: 104px;
+}
+
+.clients-content h2 {
+  margin-bottom: 36px;
+}
+
+.clients-logos {
+  width: 50%;
+  height: 100%;
+  /* background-color: rgb(255, 191, 191); */
+}
+
+.clients-logos .rows {
+  display: flex;
+  width: 100%;
+}
+
+.clients-content .title {
+  color: #ffffff;
+  font-size: 99px;
+  font-weight: 400;
+  letter-spacing: -0.03em;
+  line-height: 89px;
+  text-align: left;
+}
+
+.clients-content .desc {
+  color: #ffffff;
+  font-size: 28px;
+  font-weight: 300;
+  letter-spacing: -0.02em;
+  line-height: 39px;
+  text-align: left;
+  margin-bottom: 36px;
+}
+
+.learn-more-btn {
+  cursor: pointer;
+  color: #fff;
+  display: inline-block;
+  font-size: 13.33px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.14em;
+  line-height: 80%;
+  padding: 42px 50px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  width: 288px;
+  z-index: 1;
+}
+
+.learn-more-btn span {
+  padding-right: 5px;
+}
+
+.learn-more-btn .default-text {
+  transform: translateX(14px);
+  color: #1d1f20;
+}
+
+.learn-more-btn .default-text .last {
+  color: #ffffff;
+}
+
+.learn-more-btn .hover-text {
+  color: #1d1f20;
+  display: none;
+}
+
+.learn-more-btn::before {
+  width: 50%;
+  background-color: #ffffff;
+  content: "";
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.learn-more-btn:hover::before {
+  width: 100%;
+}
+
+.learn-more-btn:hover .default-text {
+  display: none;
+}
+
+.learn-more-btn:hover .hover-text {
+  display: block;
+}
+
+/* !MARQUEE ANIMATION LEFT */
+
+.marquee-wrapper-left {
+  border-left: 1px solid #bc4965;
+  height: 100vh;
+  width: 50%;
+  overflow: hidden;
+}
+
+.marquee-wrapper-left .marquee {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.marquee-wrapper-left .marquee-group {
+  white-space: normal;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  align-items: center;
+  animation: scroll-left 6s linear infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes scroll-left {
+  from {
+    /* transform: translateX(0); */
+    transform: translateY(calc(-100% - 12px));
+  }
+  to {
+    /* transform: translateX(calc(-100% - 12px)); */
+    transform: translateY(0);
+  }
+}
+
+/* ? MARQUEE ANIMATION RIGHT */
+
+.marquee-wrapper-right {
+  border-left: 1px solid #bc4965;
+  border-right: 1px solid #bc4965;
+  height: 100vh;
+  width: 50%;
+  overflow: hidden;
+}
+
+.marquee-wrapper-right .marquee {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.marquee-wrapper-right .marquee-group {
+  white-space: normal;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  align-items: center;
+  animation: scroll-right 5s linear infinite;
+  animation-fill-mode: forwards;
+}
+
+@keyframes scroll-right {
+  from {
+    /* transform: translateX(0); */
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(calc(-100% - 12px));
+    /* transform: translateX(calc(-100% - 12px)); */
+  }
 }
